--- a/src/pages/strenghtsports.astro
+++ b/src/pages/strenghtsports.astro
@@ -173,7 +173,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                 </div>
                 <p class="text-center mb-40">Volunteering is an excellent way to learn more about strength sports and contribute to our community. No experience is necessary—we provide training for all roles.</p>
                 <div class="text-center">
-                    <a href="contact.html" class="btn">Volunteer Sign-Up</a>
+                    <a href="/contact" class="btn">Volunteer Sign-Up</a>
                 </div>
             </section>
         </div>
