--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,9 +9,9 @@
                 <h3>T.S.K.V. Spartacus</h3>
                 <p>The largest student strength sports association in the Benelux, promoting powerlifting, bodybuilding, and fitness at Tilburg University.</p>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.facebook.com/T.S.K.V.Spartacus/" target="_blank"> <i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/tskvspartacus/"target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/t.s.k.v.-spartacus/posts/?feedView=all"target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div class="footer-column">
