--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -39,6 +39,7 @@
                     <li><a href="/membership-discounts">Membership Discounts</a></li>
                     <li><a href="/membership-discounts/bossers-vlees" target="_blank">KNKF registration</a></li>
                     <li><a href="/webshop">Webshop</a></li>
+                    <li><a href="/important-documents">Important documents</a></li>
                 </ul>
             </div>
         </div>
