--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE } from '../consts';
 
 <header>
         <div class="container">
-            <a href="index.html" class="logo">T.S.K.V. <span>Spartacus</span></a>
+            <a href="/index" class="logo">T.S.K.V. <span>Spartacus</span></a>
             <button class="nav-toggle"><i class="fas fa-bars"></i></button>
             <nav>
                 <ul>
