--- a/src/pages/history.astro
+++ b/src/pages/history.astro
@@ -103,7 +103,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
     </main>
 
     <!-- Footer -->
-    </footer>
+<Footer />
 
 <script is:inline src="/script.js"></script>
 </body>
