--- a/src/pages/history.astro
+++ b/src/pages/history.astro
@@ -104,9 +104,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                 </div>
                 <div class="about-text">
                     <blockquote>
-                        "When we started Spartacus in 2012, we never imagined it would grow to become what it is today. We simply wanted to create a space where students passionate about strength training could come together, learn from each other, and push their limits. Seeing how the association has evolved and the impact it has had on so many students' lives is truly rewarding."
+                        "Het maakt mij ongelooflijk trots om te zien dat Spartacus zoveel jaar later nog steeds een positieve impact heeft op haar leden. In de beginjaren stond de vereniging nog een beetje apart. Maar door de vastberadenheid en passie van onze leden en besturen, is Spartacus door de jaren heen uitgegroeid tot een onmisbaar onderdeel van het studentenleven in Tilburg. De verenging heeft mij zeer dierbare herinneringen, vriendschappen en ervaringen gegeven die ik al die jaren later nog steeds koester!"
                     </blockquote>
                     <p class="text-right">- Founding Member of T.S.K.V. Spartacus</p>
+                    <p class="text-right">- Sjoerd van der Zee</p>
                 </div>
             </div>
         </section>
