--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -27,7 +27,7 @@
             <div class="footer-column">
                 <h3>Member Benefits</h3>
                 <ul class="footer-links">
-                    <li><a href="/membership-discounts">Membership Discounts</a></li>
+                    <li><a href="/contact">Contact us</a></li>
                     <li><a href="/membership-discounts/bossers-vlees">Bossers Vlees</a></li>
                     <li><a href="/membership-discounts/fysiofitaal">Fysio Fitaal</a></li>
                     <li><a href="/webshop.html">Webshop</a></li>
