--- a/src/pages/history.astro
+++ b/src/pages/history.astro
@@ -106,8 +106,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                     <blockquote>
                         "Het maakt mij ongelooflijk trots om te zien dat Spartacus zoveel jaar later nog steeds een positieve impact heeft op haar leden. In de beginjaren stond de vereniging nog een beetje apart. Maar door de vastberadenheid en passie van onze leden en besturen, is Spartacus door de jaren heen uitgegroeid tot een onmisbaar onderdeel van het studentenleven in Tilburg. De verenging heeft mij zeer dierbare herinneringen, vriendschappen en ervaringen gegeven die ik al die jaren later nog steeds koester!"
                     </blockquote>
-                    <p class="text-right">- Founding Member of T.S.K.V. Spartacus</p>
-                    <p class="text-right">- Sjoerd van der Zee</p>
+                    <p class="text-right">Sjoerd van der Zee, Founding Member, T.S.K.V. Spartacus</p>
                 </div>
             </div>
         </section>
