--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,6 +14,7 @@ import { SITE_TITLE } from '../consts';
                     <li><a href="/strenghtsports">Strenghtsports</a></li>
                     <li><a href="/become-a-member">Membership</a></li>
                     <li><a href="/membership-discounts">Discounts</a></li>
+                    <li><a href="/committee">Committee</a></li>
                     <li><a href="/webshop">Webshop</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
