--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -89,6 +89,7 @@
         padding: 30px;
         border-radius: 5px;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        border-left: none;
     }
 
     .form-group {
