Email registiration with php

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -102,7 +102,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                             <li>Regular social events and workshops</li>
                         </ul>
                         <div class="price-action">
-                            <a href="become-a-member.html" class="btn">Register Now</a>
+                            <a href="/register" class="btn">Register Now</a>
                         </div>
                     </div>
                 </div>
