--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -153,7 +153,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                 <h2 class="section-title centered-title">Ready to Join the Strength Revolution?</h2>
                 <p class="mb-40">Whether you're a beginner or an experienced lifter, Spartacus offers the perfect environment to reach your fitness goals.</p>
                 <a href="/become-a-member" class="btn">Become a Member!</a>
-                <a href="https://merch.tskvspartacus.nl/" class="btn btn-secondary">Visit Our Webshop</a>
+                <a href="https://merch.tskvspartacus.nl/" class="btn btn-secondary" target="_blank">Visit Our Webshop</a>
             </section>
         </div>
     </main>
