--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -52,29 +52,29 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                         <img src="placeholder-board1.jpg" alt="Board Chair">
                         <h3 class="board-member-name">Merel van Buren</h3>
                         <p class="board-member-role">Chair</p>
-                        <p class="board-member-email">Voorzitter@tskvspartacus.nl </p>
+                        <p class="board-member-email"><a href="mailto:Voorzitter@tskvspartacus.nl">Voorzitter@tskvspartacus.nl</a></p>
                     </div>
                     
                     <div class="board-member">
                         <img src="placeholder-board2.jpg" alt="Board Secretary">
                         <h3 class="board-member-name">Jelle Smitss</h3>
                         <p class="board-member-role">Vice Chair</p>
-                        <p class="board-member-email">Vicevoorzitter@tskvspartacus.nl </p>
+                        <p class="board-member-email"><a href="mailto:Vicevoorzitter@tskvspartacus.nl">Vicevoorzitter@tskvspartacus.nl</a></p>
                     </div>
                     
                     <div class="board-member">
                         <img src="placeholder-board3.jpg" alt="Board Treasurer">
                         <h3 class="board-member-name">Herman Skledar</h3>
                         <p class="board-member-role">Treasurer</p>
-                        <p class="board-member-email">Penningmeester@tskvspartacus.nl</p>
+                        <p class="board-member-email"><a href="mailto:Penningmeester@tskvspartacus.nl">Penningmeester@tskvspartacus.nl</a></p>
                     </div>
-
-                    <div class="board-member">
-                        <img src="placeholder-board4.jpg" alt="Internal Affairs">
-                        <h3 class="board-member-name">Sam Aras</h3>
-                        <p class="board-member-role">Secretary</p>
-                        <p class="board-member-email">Secretaris@tskvspartacus.nl</p>
-                    </div>
+    <div class="board-member">
+        <img src="placeholder-board4.jpg" alt="Internal Affairs">
+        <h3 class="board-member-name">Sam Aras</h3>
+        <p class="board-member-role">Secretary</p>
+        <p class="board-member-email"><a href="mailto:Secretaris@tskvspartacus.nl">Secretaris@tskvspartacus.nl</a></p>
+    </div>
+</div>
                 </div>
             </section>
 
