--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -26,6 +26,7 @@
                 <option value="strength-sports">Strength Sports Questions</option>
                 <option value="competitions">Competition Information</option>
                 <option value="committee">Committee Involvement</option>
+                <option value="coaching application">Coaching Application</option>
                 <option value="other">Other</option>
             </select>
         </div>
