--- a/src/pages/become-a-member.astro
+++ b/src/pages/become-a-member.astro
@@ -119,7 +119,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                 <p class="mb-40">Fill out the registration form after clicking on the link "become a member!" to register with T.S.K.V. Spartacus.</p>
                 <div>
                     <a href="/register" class="btn">BECOME A MEMBER!</a>
-                    <a href="/contact" class="btn btn-secondary>CONTACT US WITH QUESTIONS</a>
+                    <a href="/contact" class="btn btn-secondary">CONTACT US WITH QUESTIONS</a>
                 </div>
             </section>
         </div>
